--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3062,6 +3062,10 @@ body.good-practice-exchange{
 	    margin-top: 44px!important;
 	}
 
+	.region-sidebar-first #more-filters-block .block.block-facetapi:first-child {
+	    margin-top: 15px!important;
+	}
+
 	.views-row img{
 		border: 0;
 	}
@@ -8658,38 +8662,6 @@ body.mp{
 
 /* MHWC-39 - For UX next step */
 
-.view-practical-tools{
-	.clear_filters{
-		padding-bottom: 0em;
-    	padding-top: 0.5em;
-		a{
-			background: #003399;
-			color: #FFF;
-			padding: 5px 10px;
-			border-radius: 5px;
-		}
-	}
-}
-
-.node-type-practical-tool{
-	.group-details{
-		h3{
-			padding-bottom: 0;
-			margin-bottom: 5px;
-		}
-		.field-label{
-			padding-top: 10px;
-			width: auto;
-		}
-		div:nth-child(2) > div.field-label{
-			padding-top: 0;
-		}
-		.field-label-inline .field-label, .field-label-inline .field-items{
-			float: none;
-		}
-	}
-}
-
 aside.col-md-3{
 	.region.region-sidebar-first.well{
 		padding: 0;
@@ -9354,13 +9326,76 @@ body.front-page{
 			}
 		}
 	}
-
 	.footer{
 		margin-top: 0;
+	}
+}
+
+/* Practical tools list  */
+.page-tools-and-publications-practical-tools{
+	#more-filters-block{
+		clear: both;
+		display: block;
+		float: left;
+		width: 100%;
+	}
+	#practical-tool-more-link, #practical-tool-less-link{
+		display: block;
+		float: left;
+		clear: both;
+		padding-top: 15px;
+		font-weight: 600;
+		padding-left: 0.8em;
+		&:after{
+			content: '';
+		    background: url(../images/show-more.png) no-repeat 8px 7px;
+		    display: block;
+		    width: 22px;
+		    height: 15px;
+		    float: right;
+		    padding-top: 5px;
+		}
+	}
+	#practical-tool-less-link{
+		&:after{
+		    background: url(../images/show-less.png) no-repeat 8px 7px;
+		}
+	}
+
+	.view-practical-tools{
+		.clear_filters{
+			padding-bottom: 0em;
+	    	padding-top: 0.5em;
+			a{
+				background: #003399;
+				color: #FFF;
+				padding: 5px 10px;
+				border-radius: 5px;
+			}
+		}
 	}
 
 }
 
+/* Practical tools detail  */
+.node-type-practical-tool{
+	.group-details{
+		h3{
+			padding-bottom: 0;
+			margin-bottom: 5px;
+		}
+		.field-label{
+			padding-top: 10px;
+			width: auto;
+		}
+		div:nth-child(2) > div.field-label{
+			padding-top: 0;
+		}
+		.field-label-inline .field-label, .field-label-inline .field-items{
+			float: none;
+		}
+	}
+}
 
 /* END MHWC-39 - For UX next step */
 
