--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -249,6 +249,29 @@
 		padding-top: 2em;
 	}
 
+	body.front-page .main-container{
+		#block-hwc-homepage-hwc-homepage-news-events{
+			.before-the-campaign{
+				.content-box-before{
+					.box-before:nth-child(1){
+						.box-before.news{
+							.view-news{
+								.view-content{
+									> div{
+										.media-body{
+											padding-left: 0;
+										}
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+
+
 }
 
 
