--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -474,12 +474,10 @@
 
 }
 
-@media (min-width: 1919px) {
+@media (max-width: 1919px) {
 	.front-page{
 		.go-to-anchor{
-			&:before{
-			    display: block;
-			}
+			 display: none !important;
 		}
 	}
 
