--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6822,6 +6822,7 @@ body.front-page{
 					background-image: linear-gradient(to bottom, #ededed 0%, #F6F6F6 47%, #ededed 100%);
 					.img-right-column{
 						height: 100%;
+						min-height: 340px;
     					display: flex;
     					align-items: center;
     					img{
