MHWC-50 - UX II recommendations GPA page

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -5899,8 +5899,23 @@ body.newsletter .hwc-share-widget {
 .node-type-gpa .main-container .group-participate .field-collection-container {
   border-bottom: 0;
 }
+.node-type-gpa .main-container .field-name-field-contact-details {
+  display: block;
+  clear: both;
+  width: 46%;
+  border: 2px solid #DEE999;
+  border-radius: 5px;
+  margin-left: 2em;
+  padding: 1em;
+}
+.node-type-gpa .main-container .field-name-field-contact-details a {
+  font-weight: 600;
+  background: url(../images/target-blank-blue.png) no-repeat 100% 64%;
+  padding-right: 1.5em;
+}
 .node-type-gpa .group-faq {
   width: 100%;
+  padding-top: 2em;
   padding-left: 2em;
   padding-right: 2em;
   clear: both;
@@ -5914,10 +5929,13 @@ body.newsletter .hwc-share-widget {
   border-right: 0;
   border-top: 0;
   border-bottom: 2px solid #DEE999;
+  border-radius: 0;
 }
 .node-type-gpa #faq .panel-default > .panel-heading {
   background: transparent;
   padding: 13px 15px;
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
 }
 .node-type-gpa #faq .panel-default > .panel-heading h3 a {
   color: #003399;
