--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6698,10 +6698,26 @@ body.newsletter{
 			}
 		}
 
+		.field-name-field-contact-details{
+			display: block;
+			clear: both;
+			width: 46%;
+			border: 2px solid #DEE999;
+			border-radius: 5px;
+			margin-left: 2em;
+			padding: 1em;
+			a{
+				font-weight: 600;
+				background: url(../images/target-blank-blue.png) no-repeat 100% 64%; 
+			 	padding-right: 1.5em;
+			}
+		}
+
 	}
 
 	.group-faq{
 		width: 100%;
+		padding-top: 2em;
 		padding-left: 2em;
 		padding-right: 2em;
 		clear: both;
@@ -6715,9 +6731,12 @@ body.newsletter{
 			border-right:0;
 			border-top: 0;
 			border-bottom: 2px solid #DEE999;
+			border-radius: 0;
 			> .panel-heading{
 				background: transparent;
 				padding: 13px 15px;
+				border-top-right-radius: 0;
+    			border-top-left-radius: 0;
 				h3{
 
 					a{
