--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -271,6 +271,14 @@
 		}
 	}
 
+	.node-type-gpa .main-container {
+		.field-name-field-contact-details {
+		    width: 85%;
+		    margin-bottom: 2em;
+		    margin-top: 2em;
+		}
+	}
+
 
 }
 
