--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6530,6 +6530,7 @@ body.newsletter{
 						    float: left;
 						    display: flex;
 						    justify-content: center;
+						    margin: 0 auto;
 						    .item {
 							    float: left;
 							    > .slider-item{
