MHWC-50 - UX II recommendations GPA page

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6709,8 +6709,6 @@ body.newsletter{
 			padding: 1em;
 			a{
 				font-weight: 600;
-				background: url(../images/target-blank-blue.png) no-repeat 100% 64%; 
-			 	padding-right: 1.5em;
 			}
 		}
 
@@ -6742,6 +6740,7 @@ body.newsletter{
 
 					a{
 						color: #003399;
+						line-height: normal;
 						&:before{
 							content: "\e253";
 							font-family: "Glyphicons Halflings";
