--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -5911,8 +5911,6 @@ body.newsletter .hwc-share-widget {
 }
 .node-type-gpa .main-container .field-name-field-contact-details a {
   font-weight: 600;
-  background: url(../images/target-blank-blue.png) no-repeat 100% 64%;
-  padding-right: 1.5em;
 }
 .node-type-gpa .group-faq {
   width: 100%;
@@ -5940,6 +5938,7 @@ body.newsletter .hwc-share-widget {
 }
 .node-type-gpa #faq .panel-default > .panel-heading h3 a {
   color: #003399;
+  line-height: normal;
 }
 .node-type-gpa #faq .panel-default > .panel-heading h3 a:before {
   content: "\e253";
