--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -8091,15 +8091,22 @@ body.front-page .footer {
 .page-tools-and-publications-practical-tools #practical-tool-less-link:after {
   background: url(../images/show-less.png) no-repeat 8px 7px;
 }
-.page-tools-and-publications-practical-tools .view-practical-tools .clear_filters {
+.page-tools-and-publications-practical-tools .region.region-content .view-practical-tools .clear_filters {
   padding-bottom: 0em;
   padding-top: 0.5em;
 }
-.page-tools-and-publications-practical-tools .view-practical-tools .clear_filters a {
+.page-tools-and-publications-practical-tools .region.region-content .view-practical-tools .clear_filters a {
   background: #003399;
   color: #FFF;
   padding: 5px 10px;
   border-radius: 5px;
+}
+.page-tools-and-publications-practical-tools .region.region-content .view-practical-tools .clear_filters a:hover {
+  text-decoration: none;
+  opacity: 0.8;
+}
+.page-tools-and-publications-practical-tools .region.region-content .view-practical-tools .view-empty {
+  margin-top: 2em;
 }
 /* Practical tools detail  */
 .node-type-practical-tool .group-details h3 {
