--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9382,19 +9382,28 @@ body.front-page{
 		}
 	}
 
-	.view-practical-tools{
-		.clear_filters{
-			padding-bottom: 0em;
-	    	padding-top: 0.5em;
-			a{
-				background: #003399;
-				color: #FFF;
-				padding: 5px 10px;
-				border-radius: 5px;
+	.region.region-content{
+		.view-practical-tools{
+			.clear_filters{
+				padding-bottom: 0em;
+		    	padding-top: 0.5em;
+				a{
+					background: #003399;
+					color: #FFF;
+					padding: 5px 10px;
+					border-radius: 5px;
+					&:hover{
+						text-decoration: none;
+						opacity: 0.8;
+					}
+				}
+			}
+
+			.view-empty{
+				margin-top: 2em;
 			}
 		}
 	}
-
 }
 
 /* Practical tools detail  */
