--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -3582,7 +3582,7 @@ p.no-results{
 				}
 
 				.views-field-field-start-date-1{
-					font-size: 1em;
+					font-size: 1.4rem;
 					margin-bottom: 0.5em;
 					font-weight: 600;
 					color: #57575a;
@@ -6966,13 +6966,6 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 /*End publications detail*/
 
 /*official campaign partners list*/
-.node-145{
-	.field-type-text-with-summary{
-		text-align: center;
-		font-size: 1.1em;
-		margin-top: 40px;
-	}
-}
 .view-id-partners_list{
 	margin: 0 25px 25px 25px;
 	color: @color2;
