--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -22,12 +22,7 @@
 }
 
 
-@media (max-width: 1200px) {
-
-	/*Events calendar*/
-	span.add-to-my-calendar {
-	 	margin-left: 166px;
-	}
+@media (max-width: 1200px){
 
 	.intro-splash-20{
 		.views-row-first{
@@ -311,6 +306,16 @@
 	}
 
 
+	.page-events .region-content #block-system-main .views-exposed-widgets #edit_field_country_code_chosen,
+	.page-events .region-content #block-system-main .views-exposed-widgets #edit_years_chosen {
+	    width: 172px!important;
+	    height: auto;
+	    min-height: 33px;
+	    margin-top: 2px;
+	    cursor: inherit;
+	}
+
+
 }
 
 
@@ -321,6 +326,21 @@
 		width: 72%;
 	}
 
+	.page_title{
+		h1{
+		    width: 65%;
+		}
+	}
+
+	.page-media-centre-events{
+		.view-events-search{
+			span.add-to-my-calendar {
+			    display: block;
+			    float: left;
+		    	margin-left: 400px;
+	    	}
+		}
+	}
 }
 
 @media (max-width: 1465px) {
