MHWC-52 - UX II recommendations Practical tools detail page

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -1305,4 +1305,11 @@
 		}
 	}
 
+	.node-type-practical-tool{
+		.field-name-field-type-of-item, .field-name-field-material-country, .field-name-field-available-in-languages, .field-collection-container{
+			float: none;
+			margin: 1em 3em 0.5em 0;
+		}
+	}
+
 }
