--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9408,11 +9408,18 @@ body.front-page{
 
 /* Practical tools detail  */
 .node-type-practical-tool{
+	h3{
+		clear: both;
+		padding-bottom: 0;
+		margin-bottom: 5px;
+	}
+	.field-name-body{
+		padding-bottom: 0;
+	}
+	.field-name-field-type-of-item, .field-name-field-material-country, .field-name-field-available-in-languages, .field-collection-container{
+		margin: 1em 3em 1.5em 0;
+	}
 	.group-details{
-		h3{
-			padding-bottom: 0;
-			margin-bottom: 5px;
-		}
 		.field-label{
 			padding-top: 10px;
 			width: auto;
