--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -8109,9 +8109,19 @@ body.front-page .footer {
   margin-top: 2em;
 }
 /* Practical tools detail  */
-.node-type-practical-tool .group-details h3 {
+.node-type-practical-tool h3 {
+  clear: both;
   padding-bottom: 0;
   margin-bottom: 5px;
+}
+.node-type-practical-tool .field-name-body {
+  padding-bottom: 0;
+}
+.node-type-practical-tool .field-name-field-type-of-item,
+.node-type-practical-tool .field-name-field-material-country,
+.node-type-practical-tool .field-name-field-available-in-languages,
+.node-type-practical-tool .field-collection-container {
+  margin: 1em 3em 1.5em 0;
 }
 .node-type-practical-tool .group-details .field-label {
   padding-top: 10px;
@@ -10322,6 +10332,13 @@ body.front-page .footer {
   /* Private Zone */
   .profile-edit-links-container .panels-flexible-region-inside-first {
     justify-content: center;
+  }
+  .node-type-practical-tool .field-name-field-type-of-item,
+  .node-type-practical-tool .field-name-field-material-country,
+  .node-type-practical-tool .field-name-field-available-in-languages,
+  .node-type-practical-tool .field-collection-container {
+    float: none;
+    margin: 1em 3em 0.5em 0;
   }
 }
 @media (max-width: 480px) {
