MHWC-51 - UX II recommendations Practical tools list

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -2624,6 +2624,7 @@ body.good-practice-exchange .footer {
   font-weight: normal;
   padding-top: 0.6em;
   display: block;
+  line-height: normal;
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row .views-field-search-api-excerpt a,
 .page-search .main-container #block-system-main .view .views-row .views-field-search-api-excerpt a,
