--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3003,6 +3003,7 @@ body.good-practice-exchange{
 							    font-weight: normal;
 							    padding-top: 0.6em;
 							    display: block;
+							    line-height: normal;
 							}
 						}
 					}
