--- a/docroot/partner/forms/mvc/view/tpl/entities/sidebar.html
+++ b/docroot/partner/forms/mvc/view/tpl/entities/sidebar.html
@@ -59,9 +59,9 @@
 
             {if $mf != "mf" && $mf != "1"}
                 {if $category == 'ocp'}
-                <li class="export-pdf"><a href="mvc/view/pdf/campaign-partnership-offer.pdf" target="_blank">> See Campaign partnership offer</a></li>
+                <li class="export-pdf"><a href="mvc/view/pdf/Partnership_offer_HWC20.pdf" target="_blank">> See Campaign partnership offer</a></li>
                 {elseif $category == 'mp'}
-                <li class="export-pdf"><a href="mvc/view/pdf/media_partnership_offer.pdf" target="_blank">> See Campaign partnership offer</a></li>
+                <li class="export-pdf"><a href="mvc/view/pdf/Media_partnership_offer_EU-OSHA_2020.pdf" target="_blank">> See Campaign partnership offer</a></li>
                 {elseif $category == 'fop'}
                 <!--<li class="export-pdf"><a href="mvc/view/pdf/HWC_2018-19_Official_campaign_partnership_offer.pdf" target="_blank">> See Campaign partnership offer</a></li>-->
                 {/if}
@@ -85,26 +85,26 @@
 
             <?php if(!empty($realCategory)){ ?>
                 <?php if ($realCategory == "official campaign partners") { ?>
-                    <li class="export-pdf"><a href="mvc/view/pdf/EU-OSHA_HWC_OCP_See how your data will appear on the Campaign website.png" target="_blank">> See how your data will appear on the Campaign website</a></li>
+                    <li class="export-pdf"><a href="mvc/view/pdf/OCP_profile_HWC20See how your data will appear on the Campaign website.jpg" target="_blank">> See how your data will appear on the Campaign website</a></li>
                 <?php } ?>
                 <?php if ($realCategory == "media partner") { ?>
-                    <li class="export-pdf"><a href="mvc/view/pdf/EU-OSHA_HWC_MP_See how your data will appear on the Campaign website.png" target="_blank">> See how your data will appear on the Campaign website</a></li>
+                    <li class="export-pdf"><a href="mvc/view/pdf/MP profile_HWC20See how your data will appear on the Campaign website.jpg" target="_blank">> See how your data will appear on the Campaign website</a></li>
                 <?php } ?>
                 <?php if ($realCategory == "national focal points") { ?>
-                    <li class="export-pdf"><a href="mvc/view/pdf/EU-OSHA_HWC_FOP_See how your data will appear on the Campaign website.PNG" target="_blank">> See how your data will appear on the Campaign website</a></li>
+                    <li class="export-pdf"><a href="mvc/view/pdf/FOP_profile_HWC20See how your data will appear on the Campaign website.jpg" target="_blank">> See how your data will appear on the Campaign website</a></li>
                 <?php } ?>
                 <?php if ($realCategory == "osh ambassador") { ?>
-                    <li class="export-pdf"><a href="mvc/view/pdf/EU-OSHA_HWC_OSH Ambassadors_See how your data_20171114_01.PNG" target="_blank">> See how your data will appear on the Campaign website</a></li>
+                    <li class="export-pdf"><a href="mvc/view/pdf/EEN_profile_HWC20See how your data will appear on the Campaign website.jpg" target="_blank">> See how your data will appear on the Campaign website</a></li>
                 <?php } ?>
             <?php } ?>
 
             <?php if(empty($realCategory)){ ?>
                 {if $category == 'ocp'}
-                <li class="export-pdf"><a href="mvc/view/pdf/EU-OSHA_HWC_OCP_See how your data will appear on the Campaign website.png" target="_blank">> See how your data will appear on the Campaign website</a></li>
+                <li class="export-pdf"><a href="mvc/view/pdf/OCP_profile_HWC20See how your data will appear on the Campaign website.jpg" target="_blank">> See how your data will appear on the Campaign website</a></li>
                 {elseif $category == 'mp'}
-                <li class="export-pdf"><a href="mvc/view/pdf/EU-OSHA_HWC_MP_See how your data will appear on the Campaign website.png" target="_blank">> See how your data will appear on the Campaign website</a></li>
+                <li class="export-pdf"><a href="mvc/view/pdf/MP profile_HWC20See how your data will appear on the Campaign website.jpg" target="_blank">> See how your data will appear on the Campaign website</a></li>
                 {elseif $category == 'fop'}
-                <li class="export-pdf"><a href="mvc/view/pdf/EU-OSHA_HWC_FOP_See how your data will appear on the Campaign website.PNG" target="_blank">> See how your data will appear on the Campaign website</a></li>
+                <li class="export-pdf"><a href="mvc/view/pdf/FOP_profile_HWC20See how your data will appear on the Campaign website.jpg" target="_blank">> See how your data will appear on the Campaign website</a></li>
                 {/if}
             <?php } ?>
 
