--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -1063,6 +1063,7 @@ ul.tabs--primary.nav.nav-tabs{
 			font-family: "Glyphicons Halflings";
 			margin-left: 10px;
 			float: right;
+			margin-right: -20px;
 		}
 	}
 	.form-item-main-tags > label.active,
@@ -1078,6 +1079,7 @@ ul.tabs--primary.nav.nav-tabs{
 			font-family: "Glyphicons Halflings";
 			margin-left: 10px;
 			float: right;
+			margin-right: -20px;
 		}
 	}
 	.page-node .node-news{
