Add language selector to stg rel 1

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -25,6 +25,12 @@ header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-l
 }
 
 /* Styles for only REL1 */
+	.rel1{
+		#block-menu-menu-header-login{
+			visibility: hidden;
+		}
+	}
+
 	/*HW20-489*/
 	.rel1{
 		.related-resources-boxes{
