--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -17,6 +17,9 @@ header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-l
   padding-left: 0.5em;
 }
 /* Styles for only REL1 */
+.rel1 #block-menu-menu-header-login {
+  visibility: hidden;
+}
 /*HW20-489*/
 .rel1 .related-resources-boxes {
   justify-content: flex-start;
